@@ -1,3 +1,8 @@
+2021-05-02 Philipp Klaus Krause <pkk AT spth.de>
+
+	* src/z80/gen.c:
+	  Caching of floating literals.
+
 2021-05-01 Philipp Klaus Krause <pkk AT spth.de>
 
 	* support/regression/tests/bug-3215.c:
